styles.css
#headname
{
  margin-left: 1%;
  font-size: .8cm;
  color: black;
  text-decoration: none;
  
}

#headside
{
  
  
  margin-left: .1%;
  font-size: .5cm;
  color:grey
  
  
}

#header
{
  
  font-family: 'Montserrat', sans-serif;

}


#dir
{
  
  margin-right: 1.5%;
  float:right
  
}

.dire
{
  text-decoration: none;
  color: black;
  font-size: 0.5cm;
  font-weight: 400;

}

#headerline
{
  margin-top: 1.25%;
  
}

#footerline
{
  margin-top: 46%;
  margin-bottom: 2.5%;
  
  
}





.alignleft 
{
  text-align: left;
  float: left;
  margin-left: 5%;
}

#aligncentert
{
  text-align: left;
  margin-left: 36.41%;
 
}
#aligncenterb
{
  text-align: left;
  margin-left: 33.37%;
 
}

.alignright 
{
  text-align: left;
  float: right;
  margin-right: 5%;
 
 
}

.titles
{
  font-weight: 700;
  font-size: .55cm;
}

.all
{
  font-family: 'Montserrat', sans-serif;

}

.webinfo
{
  font-size: .35cm;

}



.bottom
{
  margin-bottom: 2.5%;

}

